@@ -2,7 +2,7 @@
 
 [linstaller]
 distribution = Semplice
-modules = welcome.front language.front update.front timezone.front userhost.front partdisks.front bootloader.front mirrorselect.front summary.front partdisks.inst unsquash.inst language.inst timezone.inst userhost.inst fstab.inst network.inst debian.inst semplice.inst mirrorselect.inst clean.inst bootloader.inst end.front
+modules = welcome.front language.front update.front timezone.front userhost.front partdisks.front bootloader.front mirrorselect.front summary.front partdisks.inst unsquash.inst language.inst timezone.inst userhost.inst network.inst debian.inst semplice.inst mirrorselect.inst clean.inst bootloader.inst fstab.inst end.front
 special = partdisks.inst unsquash.inst
 
 [module:unsquash]
